--- a/style.css
+++ b/style.css
@@ -1,172 +1,277 @@
 body {
 	margin: 0;
 }
-header {
+
+.main_header {
 	display: flex;
-	align-items: center;
-	justify-content: space-between;
 	background-color: #2e323f;
-	color: #e0e0e2;
-	padding: 0 2rem;
+	padding: 0 6rem;
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
 }
-.main_menu ul {
-	display: flex;
-	list-style: none;
-	justify-content: space-around;
-}
-.menu_item {
-	display: flex;
-	color: #e0e0e2; 
-	text-decoration: none;
-	font-family: 'Oswald', sans-serif;
-	font-size: 18px;
-	text-transform: uppercase;
-}
+
 .logo {
 	flex-grow: 1;
 	flex-basis: 0;
-	font-family: 'Oswald', sans-serif;
-	font-size: 18px;
+	color: #fff;
+	font-size: 2rem;
 }
-.main_menu {
+
+.header_menu {
 	flex-grow: 1;
 	flex-basis: 0;
 }
+
+.menu_container {
+	display: flex;
+	justify-content: space-between;
+	list-style: none;
+}
+.menu_container li:not(:last-child) {
+	margin-right: 1rem;
+}
+
+.menu_item {
+	color: #fff;
+	text-decoration: none;
+	font-size: 1rem;
+	white-space: nowrap;
+}
+
 .rounded {
-	border-radius: 50px;
-	background: #A59678;
-	padding: 3px;
+	background-color: #a59678;
+	padding: 0.25rem 1rem;
+	border-radius: 100px;
 }
-.section_1 {
+
+.section_first {
 	display: flex;
-	color: #ffffff;
 	background-color: #3b4050;
-	font-family: 'Oswald', sans-serif;
-	padding: 5rem;
-	line-height: 6rem;
+	padding: 6rem;
 }
-.section_left {
+
+.section_first_left {
+	font-family: 'Oswald', sans-serif;
 	font-size: 90px;
+	color: #fff;
+	line-height: 6rem;
 	flex-grow: 1;
 	flex-basis: 0;
 }
-.section_right {
-	display: flex;
-	font-family: 'Montserrat', sans-serif;
-	font-size: 24px;
-	flex-grow: 2;
-	flex-basis: 0;
-	flex-direction: column;
-}
-.text_brown {
+
+.text_dark {
 	color: #a59678;
 }
-.section_1 .rounded {
-	text-decoration: none;
-	text-transform: uppercase;
-	font-size: 24px;
-	font-family: 'Oswald', sans-serif;
-	align-self: flex-start;
-}
+
 .section_first_right {
+	font-family: 'Montserrat', sans-serif;
+	font-size: 24px;
+	color: #fff;
+	flex-grow: 1;
+	flex-basis: 0;
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-end;
 }
-.section_2 {
+
+.section_first_right .rounded {
+	font-family: 'Oswald', sans-serif;
+	font-size: 24px;
+	text-transform: uppercase;
+	padding: 0.5rem 3rem;
+	align-self: start;
+}
+
+.section_second {
+	flex-direction: row;
+	padding: 6rem;
 	display: flex;
 	justify-content: space-between;
-	padding: 6rem;
-	background-color: #f1f1f1; 
+	background-color: #f1f1f1;
 	text-align: center;
 }
-.setoon_2 article {
-	margin-right: 6rem
-}
-.setoon_2 article:not(:last-child) {
+
+.section_second article:not(:last-child) {
 	margin-right: 6rem;
 }
-article p {
-	color: #5d616e;
-	font-size: 18px;
-	font-family: 'Montserrat', sans-serif;
-}
-article h2 {
+
+.section_second article h3{
 	color: #a59678;
-	font-size: 30px;
-	font-family:  'Oswald', sans-serif;
-}
-.section_3_photo img {
-	display: block;
-	width: 50rem;
-}
-.section_3_photo h2 {
 	font-family: 'Oswald', sans-serif;
-	font-size: 36px;
-	color: #a59678
+	font-size: 30px;
 }
-.section_3_photo p {
+
+.section_second article p {
+	color: #3B4050;
 	font-family: 'Montserrat', sans-serif;
-	font-size: 21px;
-	color: #5d616e;
+	font-size: 18px;
 }
-.section_3_photo {
-	margin-right: 4rem;
+
+.section_third {
+	padding: 6rem;
+	display: flex;
+}
+
+.section_third_left {
 	flex-grow: 3;
 	flex-basis: 0;
+	margin-right: 6rem;
 }
-.section_3 {
-	display: flex;
-	margin-top: 8rem;
+
+.section_third_left img {
+	display: block;
+	max-width: 100%;
+	margin: 3rem 0;
 }
-.blocks {
-	display: flex;	
-	margin: 0;
-	flex-grow: 1;
-	flex-direction: column;
+
+.section_third_left h3 {
+	font-family: 'Oswald', sans-serif;
+	font-size: 36px;
+	color: #a59678;
+}
+
+.section_third_left p {
+	font-family: 'Montserrat', sans-serif;
+	font-size: 21px;
+}
+
+.section_third_right {
 	flex-grow: 2;
 	flex-basis: 0;
 }
-.blocks h2 {
-	font-family: 'Oswald Bold'; 
-	font-size: 30px; 
-	color: #fff;
+
+.section_third_right h3 {
+	font-family: 'Oswald', sans-serif;
+	font-size: 30px;
 }
-.blocks p {
-	color: #fff;
-	font-family: 'Monserrat Regular';
+
+.section_third_right p {
+	font-family: 'Montserrat', sans-serif;
 	font-size: 18px;
 }
-.section_3 article {
-	margin: 15px;
+
+.section_third_right article {
 	background-color: #3b4050;
-	padding: 30px;
-	text-align: center;
-}
-footer {
-	background: #3b4050;
-}
-.footer_head {
-	text-align: center;
-	font-family: 'Oswald Bold';
-	font-size: 24px;
 	color: #fff;
+	padding: 1rem;
+	text-align: center;
 }
-.spisok ul {
-	list-style: none;
+
+.section_third_right article:not(:last-child) {
+	margin-bottom: 2rem;
+}
+
+
+footer {
+	background-color: #3b4050;
+	padding: 6rem;
+}
+
+.footer_top {
+	text-align: center;
+	color: #fff;
+	font-family: 'Oswald', sans-serif;
+	font-size: 70px;
+	margin-bottom: 3rem;
+}
+
+.footer_bottom {
+	font-family: 'Montserrat', sans-serif;
+	font-size: 16px;
+	color: #6F737F;
+	display: flex;
 	justify-content: space-between;
 }
-.spisok {
-	display: flex;
-	margin:0;
-	padding: 0;
+
+footer a {
+	font-family: 'Montserrat', sans-serif;
+	font-size: 16px;
+	color: #6F737F;
+	text-decoration: none;
 }
-.footer_dno {
-	font-family: 'Monserrat Regular';
+
+.footer_bottom_left {
+	flex-grow: 1;
+	flex-basis: 0;
+	margin-right: 6rem;
+}
+
+footer h3 {
+	color: #A59678;
+	font-family: 'Oswald', sans-serif;
+	font-size: 21px;
+}
+
+.footer_bottom_left p {
+	font-family: 'Montserrat', sans-serif;
 	font-size: 16px;
 }
-.nav_item {
-	color: #a59678;
-	font-family: 'Oswald Bold';
-	font-size: 21px;
+
+footer nav {
+	display: flex;
+	flex-grow: 3;
+	flex-basis: 0;
+	justify-content: space-around;
+}
+
+.footer_nav_container {
+	display: flex;
+	flex-direction: column;
+	flex-grow: 1;
+	flex-basis: 0;
+}
+
+.footer_nav_container ul {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	line-height: 3rem;
+}
+
+
+/* Media*/
+@media (max-width: 700px) {
+  .main_header {
+  	padding: 1rem;
+  	flex-direction: column;
+  }
+  .header_menu {
+  	flex-grow: 3;
+  }
+  .logo {
+  	margin: 0 auto;
+  }
+  .menu_container {
+  	padding: 0;
+  	justify-content: space-around;
+  }
+  .menu_container li:not(:last-child){
+  	margin-right: 
+  }
+  .menu_item {
+  	font-size: 0.8rem;
+  }
+    .section_second {
+  	flex-direction: column;
+  	padding: 1rem;
+  }
+  .section_second article:not(:last-child) {
+  	margin: 0;
+  }
+  .section_second h3 {
+  	margin: 1rem auto 0.5rem;
+  }
+  .section_first {
+  	padding: 1rem;
+  	flex-direction: column;
+  }
+    .section_first_left {
+  	font-size: 3rem;
+  	padding: 0;
+  	white-space: nowrap;
+  }
+  .section_first_right {
+  	font-size: 1rem;
+  	align-self: center;
+  }
 }
